убрал jaeger-tracer, сделал annotation processor